# Mosifra-API

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  dockerfile  dockerfile_postgres  flake.nix  init.sql  mongo-init.js  sonar-project.properties
.github/workflows/: build.yml  rust.yml
src/: class.rs  course_type.rs  db.rs  error_handling.rs  internship.rs  main.rs  postgres.rs  redis.rs  role.rs  university.rs  utils.rs
src/models/: mod.rs
src/models/auth/: auth_guard.rs  jwt.rs  mod.rs  user_type.rs
src/models/courses/: class.rs  course_type.rs  internship.rs  mod.rs
src/models/courses/dto/: class.rs
src/models/courses/get/: classes.rs  domain.rs
src/models/users/: admin.rs  company.rs  generic_user.rs  mod.rs  student.rs  university.rs
src/models/users/dto/: mod.rs  students.rs
src/routes/: db.rs  login.rs  mod.rs  user.rs
src/routes/auth/: domain.rs  login.rs  logout.rs  mod.rs  session.rs  twofa.rs
src/routes/courses/delete/: class.rs  mod.rs  (+1 more)
src/routes/create/: class.rs  company.rs  domain.rs  internship.rs  mod.rs  students.rs  university.rs
src/routes/login_flow/: domain.rs  login.rs  mod.rs  twofa.rs
src/routes/session/: domain.rs  mod.rs  session.rs
src/structs/: class.rs  company.rs  course_type.rs  internship.rs  jwt.rs  mod.rs  role.rs  student.rs  university.rs  user_type.rs
src/traits/: db.rs  mod.rs
src/types/: company.rs  mod.rs  student.rs  university.rs
src/utils/crypto/: generate_password.rs  hash_password.rs  mod.rs  verify_password.rs
src/utils/mail/: mod.rs  send_2fa_mail.rs  verify_mail.rs
(+32 files in other folders)
