[package]
name = "Mosifra-API"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
argon2 = "0.5.3"
async-trait = "0.1.89"
csv = "1.3.1"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
lettre = "0.11.18"
passwords = "3.1.16"
rand = "0.9.2"
redis = "0.32.5"
regex = "1.11.2"
rocket = { version = "0.5.1", features = ["json", "secrets"] }
rocket_cors = "0.6.0"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tokio-postgres = "0.7.13"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
